<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_blue"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoigreja" />

    <TextView
        android:id="@+id/textViewIntroFraseUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igreja"
        android:layout_marginTop="12dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"/>

    <TextView
        android:id="@+id/textViewFraseDois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntroFraseUm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/blue_light"

        />

    <LinearLayout
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFraseDois">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="User name"
            android:inputType="textPersonName"
            android:padding="14sp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="14sp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="number"
            android:padding="14sp"
            android:textSize="14sp"  />



        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14sp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#2196F3"
            android:textSize="15sp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/txtRespostaSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="" />

        <TextView
            android:id="@+id/textViewJaTenho"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="30dp"
            android:text="@string/voltar_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="OnClick" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>